--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -124,7 +124,7 @@
                         android:layout_marginBottom="8dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
-                        app:backGroundColor="@color/colorAccent"
+                        app:backGroundColor="@android:color/holo_red_light"
                         app:finalNumber="20"
                         app:initialNumber="1"
                         app:textSize="8sp"
