--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@mipmap/asdzxc123456789"
-
+    android:background="@drawable/bg4"
 
     tools:context=".SignUp">
 
@@ -30,7 +29,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
-                app:srcCompat="@drawable/logo3" />
+                app:srcCompat="@drawable/ggwp" />
 
             <TextView
                 android:id="@+id/title"
@@ -56,6 +55,7 @@
                 android:id="@+id/CEN1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -65,9 +65,9 @@
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     android:text="Phone number"
-                    android:textColor="@android:color/white"
                     android:textAlignment="center"
                     android:textAllCaps="false"
+                    android:textColor="@android:color/white"
                     android:textStyle="bold" />
 
                 <EditText
@@ -78,6 +78,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="text"
+                    android:textColor="@android:color/white"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -87,30 +88,13 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                --TextView
-                android:id="@+id/email"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                android:text="E-mail"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
-                --EditText
-                android:id="@+id/edtEmail"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textEmailAddress"
-                android:textSize="14sp" /></LinearLayout>
+                </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/Pass"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -119,9 +103,9 @@
                     android:layout_height="35dp"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
-                    android:textColor="@android:color/white"
                     android:text="Password"
                     android:textAlignment="center"
+                    android:textColor="@android:color/white"
                     android:textStyle="bold" />
 
                 <EditText
@@ -131,7 +115,9 @@
                     android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -146,6 +132,7 @@
                 android:id="@+id/Name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -155,8 +142,8 @@
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     android:text="Name"
-                    android:textColor="@android:color/white"
                     android:textAlignment="center"
+                    android:textColor="@android:color/white"
                     android:textStyle="bold" />
 
                 <EditText
@@ -166,7 +153,9 @@
                     android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
@@ -188,15 +177,7 @@
                 android:text="Sign Up"
                 android:textStyle="bold" />
 
-            --TextView
-                android:id="@+id/back_Re"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_weight="1"
-                android:text="Back"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+
         </LinearLayout>
 
     </LinearLayout>
